@@ -1,3 +1,15 @@
+2004-06-30  Andy Wingo  <wingo@pobox.com>
+
+	* gnome/gobject/gtype.c (scm_gtype_instance_print): Same bug.
+
+	* gnome/gobject/gvalue.c (scm_gvalue_print): I got bit by !SCM.
+	Use SCM_FALSEP instead.
+
+	* gnome/gobject/gtype.c: Yikes, somehow Martin's copyright notice
+	got lost in the file split! Put back on all files.
+
+	* gnome/gobject/gvalue.c (scm_gvalue_print): Indentation fix.
+
 2004-06-24  Andreas Rottmann  <a.rottmann@gmx.at>
 
 	* test-suite/guile-gobject-test: Include (gnome gobject) in
